--- a/index.html
+++ b/index.html
@@ -7,27 +7,10 @@
 	<body>
 		<main>
 			<article>
-				<h1> Heading
-					<p>
-						orem ipsum dolor sit amet, consectetur adipisicing elit. Quo praesentium laboriosam doloremque quibusdam itaque omnis impedit dolores maxime consectetur consequuntur.
-					</p>
-					<ul>
-						<li> item 1 </li>
-						<li> item 2 </li>
-						<li> item 3 </li>
-						<li> item 4 </li>
-						<li> item 5 </li>
-					</ul>
-				</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, exercitationem? Qui tempore id veritatis dolorum enim ducimus est dolore natus doloribus facilis ipsum quo impedit, velit sed libero voluptatibus eligendi facere iusto neque magnam nemo distinctio perferendis vel quos! Quidem quia inventore minus maxime ad similique mollitia fugit delectus doloribus magni doloremque molestiae impedit distinctio unde, nisi, at dolor quas atque eius illum pariatur aperiam? Eius praesentium consectetur adipisci hic recusandae maxime ullam doloremque vitae, temporibus enim in ab nemo, minima rem nostrum maiores molestiae nam nisi dolorum animi magnam expedita corrupti eaque. Id ipsum neque tenetur asperiores magnam reiciendis nisi voluptas ullam, voluptatum, culpa maiores dolore? Beatae sunt totam, eveniet delectus perspiciatis quo molestias enim fugiat modi pariatur nesciunt vel at earum veritatis incidunt repellendus iste voluptas ex suscipit atque doloremque! Nostrum odit esse placeat. Fuga maxime a ullam. Sed, esse officia repellat mollitia pariatur laborum omnis perferendis quisquam? Eligendi, maxime iusto nesciunt velit inventore architecto doloribus animi nemo laudantium, voluptates itaque at quia placeat temporibus tempore non? Minus, inventore molestiae? Beatae, reiciendis? Fugit eveniet, nisi soluta beatae quae labore omnis necessitatibus, expedita laudantium alias exercitationem odit laborum veniam ipsam dolores ipsa dolore, error praesentium magni? Dolore, autem consequuntur dolores harum nesciunt ad nobis, quis, ratione natus iure minus eaque corporis at quae asperiores perspiciatis soluta delectus. Deleniti in magni beatae voluptatibus et autem, accusantium cum laborum ratione a, sit numquam odio iure perferendis sint repellendus officiis error reprehenderit alias? Reprehenderit officiis, cum amet voluptate ratione nemo accusantium reiciendis?
+				</p>
 			</article>
 		</main>
 	</body>
 </html>
-
-<!-- 
-+1. NAV
-+2. List items
-	+3. Sub list
-		4. Sub-sub-list
-			5. Sub-sub-sub list
->
