--- a/index.html
+++ b/index.html
@@ -5,11 +5,33 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<div class="container">
-			<div class="item">1</div>
-			<div class="item">2</div>
-			<div class="item">3</div>
-			<div class="item">4</div>
-		</div>
+		<section class="card-container">
+			<h1 class="header"></h1>
+			<article class="card">
+				<img src="./image/3683.webp" alt="user avatar" class="user-img" />
+				<h2 class="user user-name">MEIF</h2>
+				<h3 class="user user-dev">full-stack js dp</h3>
+				<section class="links">
+					<div>
+						<a href="#">
+							<p class="user-link">323</p>
+							<span class="user-link">followers</span>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<p class="user-link before-after">290</p>
+							<span class="user-link">following</span>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<p class="user-link">22</p>
+							<span class="user-link">stories</span>
+						</a>
+					</div>
+				</section>
+			</article>
+		</section>
 	</body>
 </html>
