--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<title>INDEX</title>
+		<title>Shop</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<section class="card-container">
+		<!-- <section class="card-container">
 			<h1 class="header"></h1>
 			<article class="card">
 				<img src="./image/3683.webp" alt="user avatar" class="user-img" />
@@ -31,6 +31,88 @@
 						</a>
 					</div>
 				</section>
+			</article>
+		</section> -->
+		<div class="nav-container">
+			<nav>
+				<ul class="nav-list">
+					<li class="nav-item"><a class="link" href="#">Home</a></li>
+					<li class="nav-item"><a class="link" href="#">Shop</a></li>
+					<li class="nav-item"><a class="link" href="#">Cart</a></li>
+				</ul>
+			</nav>
+		</div>
+		<h1>Shop page</h1>
+		<section class="container">
+			<article class="card">
+				<img src="./image/3683.webp" alt="cup">
+				<h2 class="card-title">Cat</h2>
+				<p class="card-rating">Rating 4.5</p>
+				<p class="card-price">$10</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/coffee.jpg" alt="coffee">
+				<h2 class="card-title">Coffee</h2>
+				<p class="card-rating">Rating 3.2</p>
+				<p class="card-price">$1.5</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/cup.webp" alt="cup">
+				<h2 class="card-title">Cup</h2>
+				<p class="card-rating">Rating 4</p>
+				<p class="card-price">$5</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/sugar.jpeg" alt="sugar">
+				<h2 class="card-title">Sugar</h2>
+				<p class="card-rating">Rating 2.5</p>
+				<p class="card-price">$3.2</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/3683.webp" alt="cup">
+				<h2 class="card-title">Cat</h2>
+				<p class="card-rating">Rating 4.5</p>
+				<p class="card-price">$10</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/coffee.jpg" alt="coffee">
+				<h2 class="card-title">Coffee</h2>
+				<p class="card-rating">Rating 3.2</p>
+				<p class="card-price">$1.5</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/cup.webp" alt="cup">
+				<h2 class="card-title">Cup</h2>
+				<p class="card-rating">Rating 4</p>
+				<p class="card-price">$5</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/sugar.jpeg" alt="sugar">
+				<h2 class="card-title">Sugar</h2>
+				<p class="card-rating">Rating 2.5</p>
+				<p class="card-price">$3.2</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/cup.webp" alt="cup">
+				<h2 class="card-title">Cup</h2>
+				<p class="card-rating">Rating 4</p>
+				<p class="card-price">$5</p>
+				<button class="add-to-cart">Add to cart</button>
+			</article>
+			<article class="card">
+				<img src="./image/sugar.jpeg" alt="sugar">
+				<h2 class="card-title">Sugar</h2>
+				<p class="card-rating">Rating 2.5</p>
+				<p class="card-price">$3.2</p>
+				<button class="add-to-cart">Add to cart</button>
 			</article>
 		</section>
 	</body>
