--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<title>Travel form</title>
+		<title>DOC</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<form action="/test">
-			<h2>Travel reservation form</h2>
-			<h3>* denotes mandotory</h3>
-			<label for="name">Full name*:</label>
-			<input type="text" id="name" placeholder="FirstName LastName" required>
-			<label for="email">Email address*:</label>
-			<input type="email" id="email" placeholder="EMAIL_ADDRESS" required>
-			<label for="tour">Select Tour Package*:</label>
-			<select name="tour" id="tour" required>
-				<option value="goa">Goa</option>
-			</select>
-			<label for="date">Arrival date*:</label>
-			<input type="text" id="date" placeholder="m/d/y" required>
-			<label for="numb-pers">Number of person*:</label>
-			<input type="text" id="numb-pers" placeholder="UNKNOWN_TYPE" required>
-			<label>What would you want to avail?*</label>
-			<label for="board">
-				Boarding <input id="board" class="checkbox" type="checkbox" name="avail" id="avail">
-			</label>
-			<label for="food">
-				Fooding <input id="food" class="checkbox" type="checkbox" name="avail" id="avail"> 
-			</label>
-			<label for="ss">
-				Sight seeing <input id="ss" class="checkbox" type="checkbox" name="avail" id="avail">
-			</label>
-			<label for="coupon">Discout Coupon code:</label>
-			<input type="text" id="coupon" placeholder="UNKNOWN_TYPE">
-			<label>Terms and conditions*</label>
-			<div><label for="i-a"><input checked class="radio" id="i-a" type="radio" name="tac" required>I agree</label><label for="i-d"><input class="radio" type="radio" id="i-d" name="tac">I disagree</label></div>
-			<button>Complete reservation</button>
-		</form>
+		<div class="container">
+			<nav>
+				<ul>
+					<li><a href="#" class="li">HOME</a></li>
+					<li><a href="#" class="li">MEDIA</a></li>
+					<li><a href="#" class="li">SCREEN SIZE</a></li>
+				</ul>
+			</nav>
+		</div>
+		<div class="container2">
+				<div class="left-ads"></div> 
+				<div class="lorem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime ducimus facere, voluptates alias numquam consectetur! Cumque nobis rem adipisci doloremque error optio, dolorem esse voluptas voluptate beatae molestias facilis cum pariatur voluptatibus ipsa, praesentium dignissimos a. Eius sapiente cumque a animi molestias nulla? Neque ipsa, voluptate quos aspernatur aut rerum fugit cumque asperiores? Perspiciatis vero temporibus dolores architecto ad veniam. Nisi nemo ducimus nobis fugiat dignissimos sunt maiores labore rerum adipisci harum nesciunt unde hic iure minima, delectus non dolore totam provident error reiciendis ipsa, obcaecati pariatur! Reprehenderit ducimus doloremque illum ad repudiandae autem perspiciatis voluptatum excepturi, aliquid eum cum ex incidunt unde veniam? Magni repudiandae quibusdam in recusandae ratione illum optio modi explicabo numquam at nemo excepturi autem eveniet dolore facilis deleniti, laboriosam non eos, nihil voluptatum nulla fugit. Iusto corrupti aspernatur est. Doloribus laborum iusto nulla culpa reprehenderit provident? Labore blanditiis odit corporis, ullam, tenetur reprehenderit aut consequatur sed optio quaerat nesciunt, laudantium tempora quas omnis nihil officiis officia veniam facilis suscipit. Necessitatibus assumenda eligendi modi rerum quia perspiciatis, voluptatem quisquam, iste nam exercitationem unde sunt blanditiis esse repellat accusantium. Culpa necessitatibus pariatur obcaecati error, molestiae distinctio porro cum voluptatibus rem explicabo ipsa assumenda minus quo nulla, possimus accusantium officiis repellat enim. Illum nemo maxime corrupti eius, natus quam error quia minima repudiandae eveniet necessitatibus recusandae, nulla laudantium dicta sit voluptatibus reprehenderit placeat aspernatur minus cumque doloremque accusamus velit quibusdam! Similique culpa voluptas tenetur sed! Accusamus reiciendis pariatur distinctio aliquid, facilis fuga accusantium, error, hic rerum quas totam reprehenderit dolorem sunt illo sequi. Molestias aspernatur dolore, amet sint, velit debitis cum nulla sapiente, aut natus neque labore maxime laudantium. Accusamus ipsam voluptas id hic enim in facere qui voluptates quidem deleniti dolor ratione sint velit consectetur iste tempore aspernatur, eius veritatis temporibus consequuntur necessitatibus voluptatibus neque illo maiores. Cupiditate quia distinctio voluptas neque mollitia aspernatur, eveniet recusandae quasi. Fugit porro molestiae, voluptates commodi eius accusamus deserunt ea doloribus veniam dolores est sapiente magni in blanditiis repellat fugiat nesciunt, tempore quam, vero odit quisquam! Veniam dolor sunt soluta quae id odio at iste deleniti sapiente culpa saepe explicabo quidem nulla iure?</div>
+		</div>
+
+		<!-- <nav>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+				<li>Item 4</li>
+				<li>Item 5</li>
+			</ul>
+		</nav> -->
 	</body>
 </html>
