--- a/index.html
+++ b/index.html
@@ -5,28 +5,35 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<div class="container">
-			<nav>
-				<ul>
-					<li><a href="#" class="li">HOME</a></li>
-					<li><a href="#" class="li">MEDIA</a></li>
-					<li><a href="#" class="li">SCREEN SIZE</a></li>
-				</ul>
-			</nav>
-		</div>
-		<div class="container2">
-				<div class="left-ads"></div> 
-				<div class="lorem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime ducimus facere, voluptates alias numquam consectetur! Cumque nobis rem adipisci doloremque error optio, dolorem esse voluptas voluptate beatae molestias facilis cum pariatur voluptatibus ipsa, praesentium dignissimos a. Eius sapiente cumque a animi molestias nulla? Neque ipsa, voluptate quos aspernatur aut rerum fugit cumque asperiores? Perspiciatis vero temporibus dolores architecto ad veniam. Nisi nemo ducimus nobis fugiat dignissimos sunt maiores labore rerum adipisci harum nesciunt unde hic iure minima, delectus non dolore totam provident error reiciendis ipsa, obcaecati pariatur! Reprehenderit ducimus doloremque illum ad repudiandae autem perspiciatis voluptatum excepturi, aliquid eum cum ex incidunt unde veniam? Magni repudiandae quibusdam in recusandae ratione illum optio modi explicabo numquam at nemo excepturi autem eveniet dolore facilis deleniti, laboriosam non eos, nihil voluptatum nulla fugit. Iusto corrupti aspernatur est. Doloribus laborum iusto nulla culpa reprehenderit provident? Labore blanditiis odit corporis, ullam, tenetur reprehenderit aut consequatur sed optio quaerat nesciunt, laudantium tempora quas omnis nihil officiis officia veniam facilis suscipit. Necessitatibus assumenda eligendi modi rerum quia perspiciatis, voluptatem quisquam, iste nam exercitationem unde sunt blanditiis esse repellat accusantium. Culpa necessitatibus pariatur obcaecati error, molestiae distinctio porro cum voluptatibus rem explicabo ipsa assumenda minus quo nulla, possimus accusantium officiis repellat enim. Illum nemo maxime corrupti eius, natus quam error quia minima repudiandae eveniet necessitatibus recusandae, nulla laudantium dicta sit voluptatibus reprehenderit placeat aspernatur minus cumque doloremque accusamus velit quibusdam! Similique culpa voluptas tenetur sed! Accusamus reiciendis pariatur distinctio aliquid, facilis fuga accusantium, error, hic rerum quas totam reprehenderit dolorem sunt illo sequi. Molestias aspernatur dolore, amet sint, velit debitis cum nulla sapiente, aut natus neque labore maxime laudantium. Accusamus ipsam voluptas id hic enim in facere qui voluptates quidem deleniti dolor ratione sint velit consectetur iste tempore aspernatur, eius veritatis temporibus consequuntur necessitatibus voluptatibus neque illo maiores. Cupiditate quia distinctio voluptas neque mollitia aspernatur, eveniet recusandae quasi. Fugit porro molestiae, voluptates commodi eius accusamus deserunt ea doloribus veniam dolores est sapiente magni in blanditiis repellat fugiat nesciunt, tempore quam, vero odit quisquam! Veniam dolor sunt soluta quae id odio at iste deleniti sapiente culpa saepe explicabo quidem nulla iure?</div>
-		</div>
-
-		<!-- <nav>
-			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
-				<li>Item 4</li>
-				<li>Item 5</li>
-			</ul>
-		</nav> -->
+		<section class="container">
+			<section class="top-art">
+				<h1>Welcome To The Beach</h1>
+				<div class="top-div">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+					Ipsum ipsam voluptatibus saepe officia sed asperiores.
+				</div>
+				<button>Read More</button>
+			</section>
+		</section>
+		<section class="footer">
+			<div class="footer-div-1">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt labore magnam numquam nobis illo enim minus laboriosam iusto officiis saepe aspernatur impedit quae corrupti error quo possimus reiciendis, a rerum blanditiis neque ratione ipsa. Quam minima doloribus, similique corporis molestiae, dolorem asperiores accusamus odit dolores beatae debitis, itaque voluptatum tempore! Sint culpa maxime velit, temporibus facere quae esse sit corporis accusantium voluptatibus neque dolorum eius itaque minus eveniet repudiandae, doloremque laudantium. Aliquid deleniti similique fugit iusto dolorem doloremque quibusdam dicta totam, quod nesciunt corporis ipsam quia neque blanditiis quam odit facilis architecto. Perspiciatis blanditiis amet dolor eligendi quibusdam porro aspernatur.
+			</div>
+			<div class="footer-div-2">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt labore magnam numquam nobis illo enim minus laboriosam iusto officiis saepe aspernatur impedit quae corrupti error quo possimus reiciendis, a rerum blanditiis neque ratione ipsa. Quam minima doloribus, similique corporis molestiae, dolorem asperiores accusamus odit dolores beatae debitis, itaque voluptatum tempore! Sint culpa maxime velit, temporibus facere quae esse sit corporis accusantium voluptatibus neque dolorum eius itaque minus eveniet repudiandae, doloremque laudantium. Aliquid deleniti similique fugit iusto dolorem doloremque quibusdam dicta totam, quod nesciunt corporis ipsam quia neque blanditiis quam odit facilis architecto. Perspiciatis blanditiis amet dolor eligendi quibusdam porro aspernatur.
+			</div>
+		</section>
+		<table cellspacing="0">
+			<tr>
+				<th class="th1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, aut soluta? Quo accusantium asperiores obcaecati nam, omnis ab laudantium eum.</th>
+				<th class="th2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi dolores fuga aperiam tenetur aspernatur sit dolor explicabo quis cumque quod!</th>
+				<th class="th3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aspernatur eligendi exercitationem fugit omnis officia sed? Neque sapiente consequuntur numquam?</th>
+			</tr>
+		</table>
+			<!-- <div class="footer-div-3">
+				<div class="child1">1</div>
+				<div class="child2">2</div>
+				<div class="child3">3</div>
+			</div> -->
 	</body>
 </html>
