--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
 		</section>
 		<table cellspacing="0">
 			<tr>
-				<th class="th1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, aut soluta? Quo accusantium asperiores obcaecati nam, omnis ab laudantium eum.</th>
-				<th class="th2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi dolores fuga aperiam tenetur aspernatur sit dolor explicabo quis cumque quod!</th>
-				<th class="th3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aspernatur eligendi exercitationem fugit omnis officia sed? Neque sapiente consequuntur numquam?</th>
+				<td class="th1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, aut soluta? Quo accusantium asperiores obcaecati nam, omnis ab laudantium eum.</td>
+				<td class="th2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi dolores fuga aperiam tenetur aspernatur sit dolor explicabo quis cumque quod!</td>
+				<td class="th3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aspernatur eligendi exercitationem fugit omnis officia sed? Neque sapiente consequuntur numquam?</td>
 			</tr>
+			<!-- sdjdiasidaiod -->
 		</table>
-			<!-- <div class="footer-div-3">
-				<div class="child1">1</div>
-				<div class="child2">2</div>
-				<div class="child3">3</div>
-			</div> -->
 	</body>
 </html>
